Introduce new question

--- a/main.tex
+++ b/main.tex
@@ -176,6 +176,15 @@
             \vspace{1em}
 
             %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+            \begin{EnvUplevel}
+                Consider the sequence defined by the following equation:
+                \[
+                    T_k = 2^{k} + \sin\left(\frac{\pi k}{2}\right)
+                \]
+            \end{EnvUplevel}
+
+            \part[1] Question
             
         \end{parts}
 
